--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -231,7 +231,7 @@ header nav li:last-child{
 }
 
 .our-work .grid li{
-	padding: 20px;
+	/*padding: 5px;*/
 	height: 1000px;
 	border-radius: 3px;
 
@@ -242,11 +242,11 @@ header nav li:last-child{
 }
 
 .our-work .grid li.small{
-	flex-basis: 40%;
+	flex-basis: 100%;
 }
 
 .our-work .grid li.large{
-	flex-basis: 70%;
+	flex-basis: 100%;
 }
 
 
